fix(css): Overflowing multi-line headers

--- a/sass/css/site.scss
+++ b/sass/css/site.scss
@@ -22,8 +22,8 @@ img {
     color: var(--bs-primary);
     padding: 0 0 0 1px;
     margin: 0.5em 0 0.5em 0;
-    height: 2.5rem - (0.167rem * $i);
-    max-height: 2rem;
+    height: auto;
+    max-height: 6rem;
     min-height: 2rem;
     display: flex;
     justify-content: space-between;
@@ -32,7 +32,7 @@ img {
     font-size: 2rem - (0.167rem * $i);
   }
 
-  h#{$i} > a {
+  h#{$i}>a {
     color: var(--bs-primary);
     text-decoration: none;
   }
